[package]
name = "cli_binding"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
bsdiff = { workspace = true }
hot_update_utils = { workspace = true }
anyhow = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
derivative = { workspace = true }
config = { workspace = true }
reqwest = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
