[package]
name = "hot_update_utils"
edition.workspace = true
version.workspace = true

[dependencies]
md-5 = "0.11.0-pre.4"
base16ct = {version = "0.2.0", features = ["std", "alloc"]}
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
[lints]
workspace = true